<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/BackgroundBlue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_small"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@color/OverlayBlue"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/day_mon"
            android:textColor="@color/Black">
        </TextView>

        <ImageView
            android:layout_width="@dimen/layout_width_small"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/cloudy"
            tools:ignore="ContentDescription">
        </ImageView>

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/weather_cloudy">
        </TextView>

    </LinearLayout>


<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_small"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@color/OverlayBlue"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/day_tue"
            android:textColor="@color/Black">
        </TextView>

        <ImageView
            android:layout_width="@dimen/layout_width_small"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/wind"
            tools:ignore="ContentDescription">
        </ImageView>

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/weather_windy">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_small"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@color/OverlayBlue"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/day_wed"
            android:textColor="@color/Black">
        </TextView>

        <ImageView
            android:layout_width="@dimen/layout_width_small"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/raining"
            tools:ignore="ContentDescription">
        </ImageView>

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/weather_rainy">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_small"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@color/OverlayBlue"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/day_thu"
            android:textColor="@color/Black">
        </TextView>

        <ImageView
            android:layout_width="@dimen/layout_width_small"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/sun"
            tools:ignore="ContentDescription">
        </ImageView>

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/weather_sunny">
        </TextView>

    </LinearLayout><LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_height_small"
    android:layout_marginTop="@dimen/margin_large"
    android:layout_marginLeft="@dimen/margin_large"
    android:layout_marginRight="@dimen/margin_large"
    android:layout_marginBottom="@dimen/margin_small"
    android:background="@color/OverlayBlue"
    android:orientation="horizontal">

    <TextView
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/day_fri"
        android:textColor="@color/Black">
    </TextView>

    <ImageView
        android:layout_width="@dimen/layout_width_small"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:src="@drawable/wind"
        tools:ignore="ContentDescription">
    </ImageView>

    <TextView
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/weather_windy">
    </TextView>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_height_small"
    android:layout_marginTop="@dimen/margin_large"
    android:layout_marginLeft="@dimen/margin_large"
    android:layout_marginRight="@dimen/margin_large"
    android:layout_marginBottom="@dimen/margin_small"
    android:background="@color/OverlayBlue"
    android:orientation="horizontal">

    <TextView
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/day_sat"
        android:textColor="@color/Black">
    </TextView>

    <ImageView
        android:layout_width="@dimen/layout_width_small"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:src="@drawable/raining"
        tools:ignore="ContentDescription">
    </ImageView>

    <TextView
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/weather_rainy">
    </TextView>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_height_small"
    android:layout_marginTop="@dimen/margin_large"
    android:layout_marginLeft="@dimen/margin_large"
    android:layout_marginRight="@dimen/margin_large"
    android:layout_marginBottom="@dimen/margin_small"
    android:background="@color/OverlayBlue"
    android:orientation="horizontal">

    <TextView
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/day_sun"
        android:textColor="@color/Black">
    </TextView>

    <ImageView
        android:layout_width="@dimen/layout_width_small"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:src="@drawable/sun"
        tools:ignore="ContentDescription">
    </ImageView>

    <TextView
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/weather_sunny">
    </TextView>

</LinearLayout>
</LinearLayout>