<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/tool_bar"
        android:background="@color/BackgroundBlue"
        app:title="@string/app_name"
        app:titleTextColor="@color/White"
        app:layout_constraintTop_toTopOf="parent"
        />

<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/Primary"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <TextView-->
<!--            android:layout_width="@dimen/layout_width_large"-->
<!--            android:layout_height="@dimen/layout_height_large"-->
<!--            android:layout_marginStart="@dimen/margin_medium"-->
<!--            android:layout_weight="3"-->
<!--            android:gravity="center_vertical"-->
<!--            android:text="@string/weather_title"-->
<!--            android:textColor="@color/White"-->
<!--            android:textSize="@dimen/text_size_large"-->
<!--            android:textStyle="bold" />-->

<!--    </LinearLayout>-->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tab_layout_description"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/view_pager_description"
        app:layout_constraintTop_toBottomOf="@+id/tab"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>